--- a/GhostMod/GhostMod.csproj
+++ b/GhostMod/GhostMod.csproj
@@ -14,6 +14,7 @@
     <OutputPath Condition=" '$(TravisCore)' == 'true' ">Artifact\</OutputPath>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
+    <LangVersion>11</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -34,6 +35,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Celeste, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
