--- a/GhostMod/packages.config
+++ b/GhostMod/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-
 <packages>
-    <package id="YamlDotNet" version="8.1.2" targetFramework="net452" />
+  <package id="Mono.Cecil" version="0.11.3" targetFramework="net452" />
+  <package id="MonoMod.RuntimeDetour" version="21.4.29.1" targetFramework="net452" />
+  <package id="MonoMod.Utils" version="21.4.29.1" targetFramework="net452" />
+  <package id="YamlDotNet" version="8.1.2" targetFramework="net452" />
 </packages>
