--- a/everest.yaml
+++ b/everest.yaml
@@ -1,6 +1,6 @@
 ﻿- Name: GhostMod
-  Version: 1.4.0
-  DLL: GhostMod.dll
+  Version: 1.4.1
+  DLL: GhostMod\bin\Release\net452\GhostMod.dll
   Dependencies:
     - Name: Everest
       Version: 1.2781.0
