好吧, 我选择让 TASHelper 成为 Dependency, 这样我就可以不必重写 Messenger.... 至少在开发阶段让我先这样偷懒

--- a/GhostModForTas/GhostModForTas.csproj
+++ b/GhostModForTas/GhostModForTas.csproj
@@ -61,6 +61,9 @@
     <Reference Include="SpeedrunTool">
       <HintPath>lib-stripped\SpeedrunTool.dll</HintPath>
     </Reference>
+    <Reference Include="TASHelper">
+      <HintPath>lib-stripped\TASHelper.dll</HintPath>
+    </Reference>
   </ItemGroup>
     <PropertyGroup>
         <PublicizerRuntimeStrategies>Unsafe;IgnoresAccessChecksTo</PublicizerRuntimeStrategies>
