进一步改造, 先拔除 player 作为构造的参数... 不过现在已经有点运行不正常了

--- a/GhostModForTas/GhostModForTas.csproj
+++ b/GhostModForTas/GhostModForTas.csproj
@@ -70,6 +70,8 @@
     </PropertyGroup>
     <ItemGroup>
         <Publicize Include="Celeste" />
+        <Publicize Include="CelesteTAS-EverestInterop:TAS.Utils.AttributeUtils.MethodInfos" />
+        <Publicize Include="CelesteTAS-EverestInterop:TAS.Input.Commands.TasCommandAttribute.MethodInfos" />
         <DoNotPublicize Include="Celeste:Monocle.Scene.OnEndOfFrame" />
     </ItemGroup>
 
