ghosst compare 的主要逻辑完工

--- a/GhostModForTas/GhostModForTas.csproj
+++ b/GhostModForTas/GhostModForTas.csproj
@@ -73,6 +73,7 @@
         <Publicize Include="CelesteTAS-EverestInterop:TAS.Utils.AttributeUtils.MethodInfos" />
         <Publicize Include="CelesteTAS-EverestInterop:TAS.Input.Commands.TasCommandAttribute.MethodInfos" />
         <DoNotPublicize Include="Celeste:Monocle.Scene.OnEndOfFrame" />
+        <DoNotPublicize Include="Celeste:Monocle.Entity.PostUpdate" />
     </ItemGroup>
 
     <PropertyGroup>
