呃上一个提交好像没正确提交 总之现在基本上能称得上完整了, 再测试测试就可以公开发布 1.0.0 版本了

--- a/everest.yaml
+++ b/everest.yaml
@@ -1,10 +1,8 @@
 - Name: GhostModForTas
   Version: 1.0.0
-  DLL: GhostModForTas\bin\Release\net452\GhostModForTas.dll
+  DLL: bin\Release\net452\GhostModForTas.dll
   Dependencies:
     - Name: Everest
       Version: 1.4617
     - Name: CelesteTAS
       Version: 3.37.0
-    - Name: TASHelper
-      Version: 1.9.2
