支持切换 ghost 皮肤 支持更改碰撞箱颜色 支持 RTA/IGT 其他的一些优化

--- a/GhostModForTas.csproj
+++ b/GhostModForTas.csproj
@@ -72,6 +72,7 @@
         <Publicize Include="CelesteTAS-EverestInterop:TAS.Input.Commands.TasCommandAttribute.MethodInfos" />
         <DoNotPublicize Include="Celeste:Monocle.Scene.OnEndOfFrame" />
         <DoNotPublicize Include="Celeste:Monocle.Entity.PostUpdate" />
+        <DoNotPublicize Include="Celeste:Celeste.Mod.TextInput.OnInput" />
     </ItemGroup>
 
     <PropertyGroup>
