--- a/everest.yaml
+++ b/everest.yaml
@@ -1,6 +1,6 @@
 - Name: GhostModForTas
   Version: 1.0.1
-  DLL: bin\Release\net452\GhostModForTas.dll
+  DLL: bin/Release/net452/GhostModForTas.dll
   Dependencies:
     - Name: Everest
       Version: 1.4617
