--- a/GhostModForTas.csproj
+++ b/GhostModForTas.csproj
@@ -1,8 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <RootNamespace>Celeste.Mod.GhostModForTas</RootNamespace>
-    <TargetFramework>net452</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <LangVersion>11</LangVersion>
+    <CelestePrefix Condition="'$(CelestePrefix)' == '' And Exists('../../Celeste.dll')">../..</CelestePrefix>
     <Nullable>enable</Nullable>
     <AssemblyTitle>GhostModForTas</AssemblyTitle>
     <MSBuildWarningsAsMessages>$(MSBuildWarningsAsMessages);MSB3270</MSBuildWarningsAsMessages>
@@ -18,19 +19,11 @@
   <PropertyGroup>
     <PathMap>$(MSBuildProjectDirectory)=GhostModForTas/</PathMap>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugType>portable</DebugType>
-    <DefineConstants>TRACE</DefineConstants>
-    <WarningLevel>0</WarningLevel>
-    <UseVSHostingProcess>true</UseVSHostingProcess>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <WarningLevel>4</WarningLevel>
+    <NoWarn>CS8618</NoWarn>
   </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>portable</DebugType>
-    <DefineConstants>TRACE</DefineConstants>
-    <DocumentationFile />
-    <NoWarn>CS1591</NoWarn>
-    <PlatformTarget>AnyCPU</PlatformTarget>
-  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="Krafs.Publicizer" Version="2.2.1">
         <PrivateAssets>all</PrivateAssets>
@@ -40,9 +33,7 @@
     <PackageReference Include="YamlDotNet" Version="8.1.2" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="Celeste">
-        <HintPath>..\..\legacyRef\Celeste.exe</HintPath>
-    </Reference>
+    <Reference Include="$(CelestePrefix)\Celeste.dll" Publicize="true" />
     <Reference Include="CelesteTAS-EverestInterop">
       <HintPath>lib-stripped\CelesteTAS-EverestInterop.dll</HintPath>
     </Reference>
@@ -64,12 +55,15 @@
     <Reference Include="SpeedrunTool">
       <HintPath>lib-stripped\SpeedrunTool.dll</HintPath>
     </Reference>
+    <Reference Include="StudioCommunication">
+      <HintPath>lib-stripped\StudioCommunication.dll</HintPath>
+    </Reference>
   </ItemGroup>
     <PropertyGroup>
         <PublicizerRuntimeStrategies>Unsafe;IgnoresAccessChecksTo</PublicizerRuntimeStrategies>
     </PropertyGroup>
     <ItemGroup>
-        <Publicize Include="Celeste" IncludeCompilerGeneratedMembers="false"/>
+        <Publicize Include="Celeste" IncludeCompilerGeneratedMembers="false" />
         <Publicize Include="CelesteTAS-EverestInterop:TAS.Utils.AttributeUtils.MethodInfos" />
         <Publicize Include="CelesteTAS-EverestInterop:TAS.EverestInterop.InfoHUD.InfoHud.WriteTasInput" />
         <Publicize Include="CelesteTAS-EverestInterop:TAS.Input.Commands.TasCommandAttribute.MethodInfos" />
